src/main/java/com/example/demo/global/error/CustomErrorCode.java
package com.example.demo.global.error;

public enum CustomErrorCode {
    INVALID_REQUEST_PARAMETER,
    INVALID_DATA_FORMAT,
    SERVER_INTERNAL_ERROR
}